--- a/Pages/Shared/_NavicatLayout.cshtml
+++ b/Pages/Shared/_NavicatLayout.cshtml
@@ -53,7 +53,7 @@
         <div class="row m-0 p-0 lh-lg bg-f0f0f0">
             <div class="col-3 ps-1">
                 <span class="float-none fw-normal mr-1">
-                    <a class="btn-sm fs-9 text-dark border-828790 bg-white text-decoration-none fw-bold" style="padding:1px;" href="/Logout"><img src="/images/xp/vcard.png" class="mb-1" />&nbsp;@User.Identity.Name</a>
+                    <a class="btn-sm fs-9 text-dark border-828790 bg-white text-decoration-none fw-bold ps-1 pr-1" style="padding:2px;" href="/Logout"><img src="/images/xp/vcard.png" class="mb-1" />&nbsp;@User.Identity.Name</a>
                 </span>
                 <a href="/Platform/" class="text-decoration-none fw-normal mr-4 text-dark fw-bold" title="返回开发平台主页"><img class="w-auto mb-1" src="/images/xp/shield.png" /><span class="fw-bold mt-1">3.0产品开发管理平台</span></a>
             </div>
