--- a/Pages/Shared/_NavicatLayout.cshtml
+++ b/Pages/Shared/_NavicatLayout.cshtml
@@ -2,8 +2,8 @@
 @{
     //User cua = SessionUtils.Get<User>(Context.Session, "cua");
     string requestPath = Context.Request.Path.ToString();
+    var pageUrl = ViewData["PageUrl"];
 }
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -11,74 +11,91 @@
     <title>@ViewData["Title"] - RubyMine for Navicat</title>
     <link href="~/lib/bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/64adc7381d.js" crossorigin="anonymous"></script>
+    @*<script src="https://kit.fontawesome.com/64adc7381d.js" crossorigin="anonymous"></script>*@
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/wave.css">
 
-    <script src="~/lib/jquery-3.6.0/dist/jquery.js"></script>
-    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+    <script src="~/lib/jquery-3.6.0/dist/jquery.js"></script>    
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <link rel="stylesheet" href="~/css/site.css" />
     <style>
         /* width */
-        ::-webkit-scrollbar {
-            width: 6px;
+        #module_div::-webkit-scrollbar {
+            width: 3px;
             background: #f0f0f0;
         }
 
-        /* Track */
-        ::-webkit-scrollbar-track {
-            box-shadow: inset 0 0 5px grey;
-            /*border-radius: 3px;*/
-        }
-
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-            background: green;
+        /*Track*/
+        #module_div::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 3px grey;
             border-radius: 3px;
         }
 
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-            background: blue;
+        /*Handle*/
+        #module_div::-webkit-scrollbar-thumb {
+            background: #e9e9e9;
+            border-radius: 6px;
         }
+
+            /*Handle on hover*/
+            #module_div::-webkit-scrollbar-thumb:hover {
+                background: blue;
+            }
     </style>
 </head>
-<body class="fs-9 bg-f0f0f0 overflow-scroll" style="overflow-x:hidden !important;">
-    @if(User.Identity.IsAuthenticated){
-        <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;">
-            <img src="/images/whitepoint.png" />
-        </div>
-        <div class="row m-0 p-0 lh-lg bg-f0f0f0">
-            <div class="col-3 ps-1">
-                <span class="float-none fw-normal mr-1">
-                    <a class="btn-sm fs-9 text-dark border-828790 bg-white text-decoration-none fw-bold ps-1 pr-1" style="padding:2px;" href="/Logout"><img src="/images/xp/vcard.png" class="mb-1" />&nbsp;@User.Identity.Name</a>
-                </span>
-                <a href="/Platform/" class="text-decoration-none fw-normal mr-4 text-dark fw-bold" title="返回开发平台主页"><img class="w-auto mb-1" src="/images/xp/shield.png" /><span class="fw-bold mt-1">3.0产品开发管理平台</span></a>
-            </div>
-        </div>
-        <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;margin-bottom:2px;">
-            <img src="/images/whitepoint.png" />
-        </div>
-    }
-    <div class="ps-1">
+<body class="fs-9 bg-f0f0f0 overflow-hidden">
+    @if (pageUrl!=null && pageUrl.Equals("Issue")) {
         @RenderBody()
-    </div>
-
-    @if (User.Identity.IsAuthenticated) {
-        <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;margin-top:2px;">
-            <img src="/images/whitepoint.png" />
-        </div>
-        <div class="row m-0 w-100">
-            <div class="col m-0 p-1">
-                <div class="fw-normal">
-                    RubyMine 版权所有 © 四川劳吉克信息技术有限公司&nbsp; -  Powered by Jack Sparrow
-                    <a href="/APIDocs/" class="fs-9 text-dark border-828790 bg-white text-decoration-none" style="padding:1px;padding-left:3px;padding-right:4px;">API Docs</a>
-                    <a class="fs-9 text-dark border-828790 bg-white text-decoration-none" style="padding:1px;padding-left:3px;padding-right:4px;" href="/Privacy">Privacy</a>
+    }else if (User.Identity.IsAuthenticated ) {
+    <table width="100%" height="100%" cellpadding="0" cellspacing="0">
+        <tr>
+            <td height="30px">
+                <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;">
+                    <img src="/images/whitepoint.png" />
                 </div>
-            </div>
-        </div>
+                <div class="row m-0 p-0 lh-lg bg-f0f0f0">
+                    <div class="col-3 ps-1">
+                        <span class="float-none fw-normal mr-1">
+                            <a class="btn-sm text-dark border-828790 bg-white text-decoration-none fw-bold ps-1 pr-1" style="padding:2px;" href="/Logout"><img src="/images/xp/vcard.png" class="mb-1" />&nbsp;@User.Identity.Name</a>
+                        </span>
+                        <a href="/Platform/" class="text-decoration-none fw-normal mr-4 text-dark fw-bold" title="返回开发平台主页"><img class="w-auto mb-1" src="/images/xp/shield.png" /><span class="fw-bold mt-1">3.0产品开发管理平台</span></a>
+                    </div>
+                </div>
+                <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;margin-bottom:2px;">
+                    <img src="/images/whitepoint.png" />
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td height="100%">
+                <div class="ps-1 h-100 overflow-hidden">
+                    @RenderBody()
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td height="30px">
+                <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;margin-top:2px;">
+                    <img src="/images/whitepoint.png" />
+                </div>
+                <div class="row m-0 w-100">
+                    <div class="col m-0 p-1">
+                        <div class="fw-normal">
+                            RubyMine 版权所有 © 四川劳吉克信息技术有限公司&nbsp; -  Powered by Jack Sparrow
+                            <a href="/APIDocs/" class="fs-9 text-dark border-828790 bg-white text-decoration-none" style="padding:1px;padding-left:3px;padding-right:4px;">API Docs</a>
+                            <a class="fs-9 text-dark border-828790 bg-white text-decoration-none" style="padding:1px;padding-left:3px;padding-right:4px;" href="/Privacy">Privacy</a>
+                        </div>
+                    </div>
+                </div>
+
+            </td>
+        </tr>
+    </table>
+    } else {
+    @RenderBody()
     }
 </body>
 </html>
